[package]
name = "jest"
version = "0.1.0"
edition = "2021"
authors = ["Sable", "lylythechosenone"]
license = "MIT"

[dependencies]
portable-atomic = "1.4.3"
slotmap = "1.0.6"
tokio = { version = "1.32.0", features = ["sync"] }

[lib]
name = "jest"
pathjs = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
crate-type = ["rlib"]
